Corrected function references in manual executions

--- a/example/BER_sims.ipynb
+++ b/example/BER_sims.ipynb
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XLA can lead to reduced numerical precision. Use with care.\n"
+     ]
+    }
+   ],
    "source": [
     "#general imports\n",
     "import sionna\n",
@@ -45,7 +53,7 @@
     "from sionna.fec.ldpc.decoding import LDPC5GDecoder\n",
     "from sionna.mapping import Mapper, Demapper\n",
     "from sionna.channel import OFDMChannel\n",
-    "\n",
+    "from sionna.utils import compute_ber as CountBitErrors\n",
     "#Used to track time as save results\n",
     "import time\n",
     "import pickle\n",
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,10 +93,15 @@
     "carrier_frequency = 2.0e9\n",
     "elevation_angle = 80.0\n",
     "num_ut = 2\n",
+    "num_ut_ant = 1\n",
     "num_bits_per_symbol = 2 # for 4QAM\n",
     "coderate = 0.5\n",
     "sat_height = 600000.0\n",
     "ebno_db = 10.0 # Noise, Energy per Bit per Noise ratio in dB\n",
+    "batch_size = 128\n",
+    "\n",
+    "num_tx = num_ut\n",
+    "num_streams_per_tx = num_ut_ant \n",
     "\n",
     "# OFDM Frame\n",
     "rg = ResourceGrid(num_ofdm_symbols=14,\n",
@@ -151,6 +164,10 @@
     "mapper = Mapper(\"qam\", num_bits_per_symbol)\n",
     "rg_mapper = ResourceGridMapper(rg)\n",
     "\n",
+    "# Creates a new channel realization\n",
+    "topology = gen_ntn_topology(batch_size=batch_size, num_ut=num_ut, scenario=scenario)\n",
+    "channel_model.set_topology(*topology)\n",
+    "\n",
     "# Channel. This channel takes the underlying functionality of the NTN channel and returns\n",
     "# an easy to use channel that directly takes OFDM frames, without the user needing to manually\n",
     "# define the channel behavior on the OFDM frame.\n",
@@ -173,24 +190,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bit Error Rate is:  tf.Tensor(0.5049921671549479, shape=(), dtype=float64)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Creates a new channel realization\n",
-    "topology = gen_ntn_topology(batch_size=batch_size, num_ut=num_ut, scenario=scenario)\n",
-    "channel_model.set_topology(*topology)\n",
-    "\n",
     "# Transforms the desired noise in energy per information bit to the correct value for\n",
     "# the coderate, bits per symbol, and the resource grid\n",
     "no = ebnodb2no(ebno_db, num_bits_per_symbol, coderate, rg)\n",
     "# Generates bits for each users upstream in sizes of k (number informaion bits per OFDM frame)\n",
     "b = binary_source([batch_size, num_tx, num_streams_per_tx, k])\n",
-    "c = self._encoder(b)\n",
+    "c = encoder(b)\n",
     "# Maps encoded bits to 4QAM symbols\n",
-    "x = self._mapper(c)\n",
+    "x = mapper(c)\n",
     "# Maps symbols to defined OFDM frame format (resource grid)\n",
-    "x_rg = self._rg_mapper(x)"
+    "x_rg = rg_mapper(x)\n",
+    "\n",
+    "# Transmit bits over ofdm_channel\n",
+    "y, h = ofdm_channel([x_rg, no])\n",
+    "\n",
+    "# Estimate channel\n",
+    "h_hat, err_var = ls_est ([y, no])\n",
+    "# Equalize channel based on estimation\n",
+    "x_hat, no_eff = lmmse_equ([y, h_hat, err_var, no])\n",
+    "# Demap and decode the received symbols\n",
+    "llr = demapper([x_hat, no_eff])\n",
+    "b_hat = decoder(llr)\n",
+    "\n",
+    "print(\"Bit Error Rate is: \", CountBitErrors(b, b_hat))"
    ]
   },
   {
@@ -545,9 +579,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sionna_kernel",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "sionna_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -559,9 +593,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
