Fixed typo in comments

--- a/example/BER_sims.ipynb
+++ b/example/BER_sims.ipynb
@@ -54,7 +54,7 @@
     "from sionna.mapping import Mapper, Demapper\n",
     "from sionna.channel import OFDMChannel\n",
     "from sionna.utils import compute_ber as CountBitErrors\n",
-    "#Used to track time as save results\n",
+    "#Used to track time and save results\n",
     "import time\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
