Adapted final text box for new scenario

--- a/example/BER_sims.ipynb
+++ b/example/BER_sims.ipynb
@@ -632,7 +632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the performance differ significantly. In the presence of Doppler, the systems were only able to function with perfect CSI. Without perfect CSI, the performance decreases rapidly."
+    "As we can see, the performances differ. The suburban scenario performs the best, while the dense urban scenario performs the worst. This matches the line of sight probabilities for the scenarios at this respective angle."
    ]
   }
  ],
