Adapted imports in examples

--- a/example/ML_based_SIMO_receiver.ipynb
+++ b/example/ML_based_SIMO_receiver.ipynb
@@ -61,7 +61,7 @@
     "#Specific components used in this simulation\n",
     "from sionna.ofdm import ResourceGrid, ResourceGridMapper, LSChannelEstimator, LMMSEEqualizer, RemoveNulledSubcarriers, ResourceGridDemapper\n",
     "from sionna.mimo import StreamManagement\n",
-    "from sionna.channel.tr38811 import AntennaArray, DenseUrban, Urban, SubUrban\n",
+    "from sionna.phy.channel.tr38811 import AntennaArray, DenseUrban, Urban, SubUrban\n",
     "from sionna.utils import BinarySource, ebnodb2no, sim_ber, log10, insert_dims, expand_to_rank\n",
     "from sionna.fec.ldpc.encoding import LDPC5GEncoder\n",
     "from sionna.fec.ldpc.decoding import LDPC5GDecoder\n",
@@ -72,7 +72,7 @@
     "import time\n",
     "import pickle\n",
     "\n",
-    "from sionna.channel.tr38811.utils import gen_single_sector_topology as gen_ntn_topology\n",
+    "from sionna.phy.channel.tr38811.utils import gen_single_sector_topology as gen_ntn_topology\n",
     "\n",
     "#Imports to build the Neural Networks\n",
     "from tensorflow.keras import Model\n",
@@ -578,7 +578,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sionnaOneZeroOpenNTNTest",
    "language": "python",
    "name": "python3"
   },
@@ -592,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
