--- a/example/BER_sims.ipynb
+++ b/example/BER_sims.ipynb
@@ -47,7 +47,7 @@
     "#Specific components used in this simulation\n",
     "from sionna.ofdm import ResourceGrid, ResourceGridMapper, LSChannelEstimator, LMMSEEqualizer, RemoveNulledSubcarriers\n",
     "from sionna.mimo import StreamManagement\n",
-    "from sionna.channel.tr38811 import AntennaArray, DenseUrban, Urban, SubUrban\n",
+    "from sionna.phy.channel.tr38811 import AntennaArray, DenseUrban, Urban, SubUrban\n",
     "from sionna.utils import BinarySource, ebnodb2no, sim_ber\n",
     "from sionna.fec.ldpc.encoding import LDPC5GEncoder\n",
     "from sionna.fec.ldpc.decoding import LDPC5GDecoder\n",
@@ -60,7 +60,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# It is important to use the new topology generation function.\n",
-    "from sionna.channel.tr38811.utils import gen_single_sector_topology as gen_ntn_topology"
+    "from sionna.phy.channel.tr38811.utils import gen_single_sector_topology as gen_ntn_topology"
    ]
   },
   {
@@ -638,7 +638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "debug_opentn_installer",
+   "display_name": "sionnaOneZeroOpenNTNTest",
    "language": "python",
    "name": "python3"
   },
@@ -652,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
