--- a/example/channel_response.ipynb
+++ b/example/channel_response.ipynb
@@ -48,9 +48,9 @@
     "from sionna.channel import subcarrier_frequencies, cir_to_ofdm_channel\n",
     "\n",
     "# These functions also exist in sionna.channel.tr38901 but are not compatable with 3GPP TR38.811\n",
-    "from sionna.channel.tr38811 import Antenna, AntennaArray\n",
-    "from sionna.channel.tr38811.utils import gen_single_sector_topology as gen_ntn_topology\n",
-    "from sionna.channel.tr38811 import DenseUrban, Urban, SubUrban"
+    "from sionna.phy.channel.tr38811 import Antenna, AntennaArray\n",
+    "from sionna.phy.channel.tr38811.utils import gen_single_sector_topology as gen_ntn_topology\n",
+    "from sionna.phy.channel.tr38811 import DenseUrban, Urban, SubUrban"
    ]
   },
   {
@@ -889,7 +889,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "debug_opentn_installer",
+   "display_name": "sionnaOneZeroOpenNTNTest",
    "language": "python",
    "name": "python3"
   },
@@ -903,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
