--- a/example/ML_based_SIMO_receiver.ipynb
+++ b/example/ML_based_SIMO_receiver.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this final notebook, we will have a look at the integrability of ML using the NTN channel models. To do that, we will reuse the existing implementation.\n",
-    "\n",
-    "The main feature of this framework is the fast and easy integration of ML based solutions. This includes both the \n",
-    "1. integration of existing solutions,\n",
-    "2. as well as the setup of new solutions based on i.e. for example architectures from literature. \n",
-    "In this notebook we will showcase the process by implementing a Rx processing chain for OFDM systems. We assume the following scenario:\n",
-    "\n",
-    "You are a reasearcher and are interested in the investigation of ML based solutions for NTN. During your research, you discover that there already is freely available code for a NN based solution for the SIMO Rx processing of terrestrial networks. You quickly reuse the code and investigate it in your NTN use case. After observing the performance, you try to adpat the code for the MIMO case. While doing more research, you find that there is already a paper on adapting the NN for the MIMO scenarios. However, this time there is no code. So you quickly, implement the code yourself and test it in the flexible framework.\n",
+    "In this final notebook, we will have a look at the integrability of ML using the NTN channel models. To do that, we will reuse the existing implementation of the NeuralReceiver provided by Sionna https://nvlabs.github.io/sionna/phy/tutorials/Neural_Receiver.html.\n",
     "\n",
     "The used papers are the paper on a NN based SIMO receiver\n",
     "DeepRx: Fully convolutional deep learning receiver, submitted to IEEE Transactions on Wireless Communications. arXiv preprint:1711.05101, 2020.\n",
@@ -25,20 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XLA can lead to reduced numerical precision. Use with care.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#General imports\n",
-    "import sionna\n",
+    "import sionna.phy\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -59,14 +44,15 @@
     "\n",
     "\n",
     "#Specific components used in this simulation\n",
-    "from sionna.ofdm import ResourceGrid, ResourceGridMapper, LSChannelEstimator, LMMSEEqualizer, RemoveNulledSubcarriers, ResourceGridDemapper\n",
-    "from sionna.mimo import StreamManagement\n",
+    "from sionna.phy.ofdm import ResourceGrid, ResourceGridMapper, LSChannelEstimator, LMMSEEqualizer, RemoveNulledSubcarriers, ResourceGridDemapper\n",
+    "from sionna.phy.mimo import StreamManagement\n",
     "from sionna.phy.channel.tr38811 import AntennaArray, DenseUrban, Urban, SubUrban\n",
-    "from sionna.utils import BinarySource, ebnodb2no, sim_ber, log10, insert_dims, expand_to_rank\n",
-    "from sionna.fec.ldpc.encoding import LDPC5GEncoder\n",
-    "from sionna.fec.ldpc.decoding import LDPC5GDecoder\n",
-    "from sionna.mapping import Mapper, Demapper\n",
-    "from sionna.channel import OFDMChannel\n",
+    "from sionna.phy.utils import ebnodb2no, sim_ber, log10, insert_dims, expand_to_rank\n",
+    "from sionna.phy.fec.ldpc.encoding import LDPC5GEncoder\n",
+    "from sionna.phy.fec.ldpc.decoding import LDPC5GDecoder\n",
+    "from sionna.phy.mapping import Mapper, Demapper, BinarySource\n",
+    "from sionna.phy.channel import OFDMChannel\n",
+    "from sionna.phy import Block\n",
     "\n",
     "#Used to track time as save results\n",
     "import time\n",
@@ -77,9 +63,7 @@
     "#Imports to build the Neural Networks\n",
     "from tensorflow.keras import Model\n",
     "from tensorflow.keras.layers import Layer, Conv2D, LayerNormalization\n",
-    "from tensorflow.nn import relu\n",
-    "\n",
-    "sionna.config.xla_compat=True"
+    "from tensorflow.nn import relu"
    ]
   },
   {
@@ -93,7 +77,7 @@
     "num_bits_per_symbol = 2\n",
     "train_new_model = False\n",
     "evaluate_model = True\n",
-    "model_weights_path = \"ntn_deeprx_model_weights_no_Dopp\"\n",
+    "model_weights_path = \"ntn_deeprx_model_weights\"\n",
     "\n",
     "ebno_db_min = -5.0\n",
     "ebno_db_max = 0.5\n",
@@ -111,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +199,7 @@
     "                                   padding='same',\n",
     "                                   activation=None)\n",
     "\n",
-    "    def call(self, inputs):\n",
-    "        y, no = inputs\n",
+    "    def call(self, y, no):\n",
     "\n",
     "        # Feeding the noise power in log10 scale helps with the performance\n",
     "        no = log10(no)\n",
@@ -251,11 +234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class FullE2EModel(tf.keras.Model):\n",
+    "class FullE2EModel(Block):\n",
     "    \"\"\"Simulate OFDM MIMO transmissions over a 3GPP 38.811 model.\n",
     "    \"\"\"\n",
     "    def __init__(self, scenario, perfect_csi, doppler_enabled, elevation_angle = 80.0, deep_rx = False, training=False):\n",
@@ -396,21 +379,21 @@
     "        x_rg = self._rg_mapper(x)\n",
     "\n",
     "        no_ = expand_to_rank(no, tf.rank(x_rg))\n",
-    "        y, h = self._ofdm_channel([x_rg, no_])\n",
+    "        y, h = self._ofdm_channel(x_rg, no_)\n",
     "\n",
     "        if not self._deep_rx:\n",
     "            if self._perfect_csi:\n",
     "                h_hat = self._remove_nulled_subcarriers(h)\n",
     "                err_var = 0.0\n",
     "            else:\n",
-    "                h_hat, err_var = self._ls_est([y, no])\n",
+    "                h_hat, err_var = self._ls_est(y, no)\n",
     "            \n",
-    "            x_hat, no_eff = self._lmmse_equ([y, h_hat, err_var, no])\n",
-    "            llr = self._demapper([x_hat, no_eff])   \n",
+    "            x_hat, no_eff = self._lmmse_equ(y, h_hat, err_var, no)\n",
+    "            llr = self._demapper(x_hat, no_eff)   \n",
     "\n",
     "        elif self._deep_rx:\n",
     "            y = tf.squeeze(y, axis=1)\n",
-    "            llr = self._neural_receiver([y, no])\n",
+    "            llr = self._neural_receiver(y, no)\n",
     "            llr = insert_dims(llr, 2, 1) # Reshape the input to fit what the resource grid demapper is expected\n",
     "            llr = tf.reshape(llr, [batch_size, 1, 1, self._rg.num_ofdm_symbols, self._rg.fft_size, 2])\n",
     "\n",
@@ -457,7 +440,7 @@
     "        # Therefore, a loss function is defined as the additive inverse of the BMD rate\n",
     "        loss = -rate\n",
     "    # Computing and applying gradients\n",
-    "    weights = model.trainable_weights\n",
+    "    weights = tape.watched_variables()\n",
     "    grads = tape.gradient(loss, weights)\n",
     "    optimizer.apply_gradients(zip(grads, weights))\n",
     "    # Periodically printing the progress\n",
@@ -480,11 +463,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights = model.get_weights()\n",
-    "with open(model_weights_path, 'wb') as f:\n",
-    "    pickle.dump(weights, f)\n",
-    "    \n",
-    "start = time.time()\n",
     "SIMS = {\n",
     "    \"ebno_db\" : list(np.arange(-5, 0.5, 0.5)),\n",
     "    \"ber\" : [],\n",
@@ -498,8 +476,13 @@
     "model(1, tf.constant(10.0, tf.float32))\n",
     "with open(model_weights_path, 'rb') as f:\n",
     "    weights = pickle.load(f)\n",
-    "model.set_weights(weights)\n",
-    "BLER = {}\n",
+    "\n",
+    "for i, w in enumerate(weights):\n",
+    "    model._neural_receiver.weights[i].assign(w)\n",
+    "\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
     "# Evaluations\n",
     "ber,bler = sim_ber(model, ebno_dbs, batch_size=128, num_target_block_errors=1000, max_mc_iter=1000)\n",
     "SIMS[\"ber\"].append(list(ber.numpy()))\n",
@@ -521,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +561,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sionnaOneZeroOpenNTNTest",
+   "display_name": "sionna_OpenNTN_kernel",
    "language": "python",
    "name": "python3"
   },
@@ -592,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
