Corrected introduction text to reference correct contents of notebook

--- a/example/ML_based_SIMO_receiver.ipynb
+++ b/example/ML_based_SIMO_receiver.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this final notebook, we will have a look at the integrability of ML using the NTN channel models. To do that, we will reuse the existing implementation.\n",
+    "In this final notebook, we will have a look at the integrability of ML using the NTN channel models. To do that, we will reuse the existing implementation of the NeuralReceiver provided by Sionna https://nvlabs.github.io/sionna/phy/tutorials/Neural_Receiver.html.\n",
     "\n",
-    "The main feature of this framework is the fast and easy integration of ML based solutions. This includes both the \n",
-    "1. integration of existing solutions,\n",
-    "2. as well as the setup of new solutions based on i.e. for example architectures from literature. \n",
-    "In this notebook we will showcase the process by implementing a Rx processing chain for OFDM systems. We assume the following scenario:\n",
-    "\n",
-    "You are a reasearcher and are interested in the investigation of ML based solutions for NTN. During your research, you discover that there already is freely available code for a NN based solution for the SIMO Rx processing of terrestrial networks. You quickly reuse the code and investigate it in your NTN use case. After observing the performance, you try to adpat the code for the MIMO case. While doing more research, you find that there is already a paper on adapting the NN for the MIMO scenarios. However, this time there is no code. So you quickly, implement the code yourself and test it in the flexible framework.\n",
-    "\n",
-    "The used papers are the paper on a NN based SIMO receiver\n",
-    "DeepRx: Fully convolutional deep learning receiver, submitted to IEEE Transactions on Wireless Communications. arXiv preprint:1711.05101, 2020.\n",
-    "This has already been implemented in a Sionna Tutorial:\n",
-    "Neural Receiver for OFDM SIMO Systems, https://nvlabs.github.io/sionna/examples/Neural_Receiver.html\n",
-    "The extension for the MIMO case is in the paper:\n",
-    "Korpi, D., Honkala, M., Huttunen, J.M., & Starck, V. (2020). DeepRx MIMO: Convolutional MIMO Detection with Learned Multiplicative Transformations. ICC 2021 - IEEE International Conference on Communications, 1-7.\n",
+    "The used papers are the paper on a NN based SIMO receiver DeepRx: Fully convolutional deep learning receiver, submitted to IEEE Transactions on Wireless Communications. arXiv preprint:1711.05101, 2020. This has already been implemented in a Sionna Tutorial: Neural Receiver for OFDM SIMO Systems, https://nvlabs.github.io/sionna/examples/Neural_Receiver.html The extension for the MIMO case is in the paper: Korpi, D., Honkala, M., Huttunen, J.M., & Starck, V. (2020). DeepRx MIMO: Convolutional MIMO Detection with Learned Multiplicative Transformations. ICC 2021 - IEEE International Conference on Communications, 1-7.\n",
     "\n",
     "As the previous examples have shown, the NTN channels are very challenging, especially without perfect CSI and in presense of doppler spread. Thus, ML based solutions are a promissing solution. Additionally, despite this notebook reusing an existing NN already implemented in Sionna for the existing code, this actually only effects a small part of the code and could be done with any existing NN in a Tensorflow compatible format."
    ]
